--- a/visualiser/src/main/resources/FXML/StartingPage.fxml
+++ b/visualiser/src/main/resources/FXML/StartingPage.fxml
@@ -18,7 +18,7 @@
                         <Label fx:id="statusLbl" alignment="CENTER" layoutX="309.0" layoutY="486.0" prefHeight="15.0" prefWidth="171.0" />
                   <ImageView fitHeight="162.0" fitWidth="407.0" layoutX="193.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Logo/SailIOLogo.png" />
+                        <Image url="@/Logo/SailIOLogo.png" />
                      </image></ImageView>
                         <JFXButton fx:id="connectBtn" layoutX="317.0" layoutY="445.0" onAction="#connect" prefHeight="36.0" prefWidth="152.0" text="Connect" />
                         <JFXTextField fx:id="ipField" focusColor="WHITE" labelFloat="true" layoutX="273.0" layoutY="400.0" prefHeight="36.0" prefWidth="144.0" promptText="IP" unFocusColor="#464646" />
